policies/httproute-enforce-hostnames/tests/overlays/test02/generated/admissionregistration.k8s.io_v1beta1_validatingadmissionpolicybinding_httproute-enforce-hostnames-vap-library-test-test02.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: httproute-enforce-hostnames-vap-library-test-test02
  namespace: httproute-enforce-hostnames-vap-library-test02
spec:
  matchResources:
    matchPolicy: Equivalent
    namespaceSelector:
      matchLabels:
        vap-library.com/httproute-enforce-hostnames: deny
    objectSelector: {}
  paramRef:
    name: httproute-enforce-hostnames-vap-library-test
    parameterNotFoundAction: Deny
  policyName: httproute-enforce-hostnames.vap-library.com
  validationActions:
  - Deny
