policies/httproute-enforce-hostnames/tests/overlays/test02/generated/gateway.networking.k8s.io_v1beta1_httproute_httproute-example-vap-library-test-test02.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httproute-example-vap-library-test-test02
  namespace: httproute-enforce-hostnames-vap-library-test02
spec:
  hostnames:
  - notallowed.example.com
  parentRefs:
  - name: dummy
