policies/httproute-enforce-hostnames/tests/overlays/test02/generated/v1_namespace_httproute-enforce-hostnames-vap-library-test02.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    vap-library.com/httproute-enforce-hostnames: deny
  name: httproute-enforce-hostnames-vap-library-test02
