policies/httproute-enforce-hostnames/tests/overlays/test02/generated/vap-library.com_v1beta1_httprouteenforcehostnamesparam_httproute-enforce-hostnames-vap-library-test.yaml
apiVersion: vap-library.com/v1beta1
kind: HTTPRouteEnforceHostnamesParam
metadata:
  name: httproute-enforce-hostnames-vap-library-test
  namespace: httproute-enforce-hostnames-vap-library-test02
spec:
  allowedHostnames:
  - test.example.com
  - test2.example.com
